Sprint040|ALPHA-749|Fix home slider, fix spacing and other sliders and clear legacy code

--- a/app/styles/components/carousel/_index.scss
+++ b/app/styles/components/carousel/_index.scss
@@ -66,7 +66,7 @@
 }
 
 .atm-carousel-dots {
-  // bottom: -2.5rem;
+  bottom: -2.4rem;
   display: flex!important;
   line-height: 0;
   height: auto;
